--- a/video.html
+++ b/video.html
@@ -2,41 +2,93 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growth Mindset Videos</title>
     <style>
+        body {
+            background: linear-gradient(to right, #ff80bf, #9b59b6); /* Gradient pink to purple */
+            color: white;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
         .container {
-            max-width: 900px;
+            max-width: 1200px;
             margin: auto;
-            padding: 20px;
+            padding: 30px;
         }
 
         h2 {
             text-align: center;
             margin-bottom: 20px;
+            font-size: 36px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
+        .welcome-text {
+            text-align: center;
+            font-size: 28px;
+            margin-bottom: 40px;
+            font-weight: bold;
+            color: #fff;
         }
 
         .video-grid {
             display: flex;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 30px;
             justify-content: center;
+            border-radius: 15px;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.1);
         }
 
         .video-grid iframe {
-            width: 45%;
-            height: 250px;
+            width: 48%; /* Two videos per row */
+            height: 400px;
+            border-radius: 10px;
+            border: 3px solid #fff;
+        }
+
+        .video-grid iframe:hover {
+            transform: scale(1.05);
+            transition: 0.3s ease;
         }
 
         @media (max-width: 768px) {
             .video-grid iframe {
-                width: 100%;
+                width: 100%; /* Full-width on small screens */
             }
+        }
+
+        /* Optional: Style for a button or additional decorative element */
+        .button {
+            display: inline-block;
+            background-color: #9b59b6;
+            color: white;
+            padding: 15px 25px;
+            border-radius: 30px;
+            font-size: 18px;
+            text-decoration: none;
+            margin-top: 20px;
+            transition: background-color 0.3s ease;
+        }
+
+        .button:hover {
+            background-color: #ff80bf;
         }
     </style>
 </head>
 <body>
     <div class="container">
+        <div class="welcome-text">
+            <p>Welcome to the Growth Mindset Video Collection!</p>
+        </div>
+
         <h2>Growth Mindset Videos</h2>
+
         <div class="video-grid">
             <iframe src="https://www.youtube.com/embed/2zrtHt3bBmQ" frameborder="0" allowfullscreen></iframe>
             <iframe src="https://www.youtube.com/embed/M1CHPnZfFmU?si=X3kFisYyTP0Fkvz4" frameborder="0" allowfullscreen></iframe>
@@ -59,6 +111,8 @@
             <iframe src="https://www.youtube.com/embed/aNHas97iE78?si=K-2Th5dIBM1tltHK" frameborder="0" allowfullscreen></iframe>
             <iframe src="https://www.youtube.com/embed/xWj-adZemk4?si=lhpFVguhGKureG85" frameborder="0" allowfullscreen></iframe>
         </div>
+        
+        <a href="#" class="button">Explore More Videos</a>
     </div>
 </body>
 </html>
